fix: improved code readability

--- a/Components/Badges/badges.css
+++ b/Components/Badges/badges.css
@@ -1,37 +1,39 @@
 @import "../Avtars/avtars.css";
 
 
-.badge{
+.badge {
     display: inline-block;
     position: relative;
     margin: 3rem 1rem;
-    
-    
+
+
 }
 
-.online, .offline, .dnd{
-height: 1rem;
-width: 1rem;
-border-radius: 50%;
-position: absolute;
-bottom: 1rem;
-right: 1rem;
+.online,
+.offline,
+.dnd {
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
 }
 
-.online{
+.online {
     background-color: green;
 }
 
-.offline{
+.offline {
     background-color: gray;
 }
 
-.dnd{
+.dnd {
     background-color: red;
 }
 
 
-.number{
+.number {
 
     font-size: 16px;
     position: absolute;
